// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Content banner renders correctly 1`] = `
<jest>
  <div
    class="bcl-content-banner pb-md-4-75 pb-4 pt-4 pt-md-4-75 bg-lighter"
  >
    <div
      class="container"
    >
      <article
        class="card"
      >
        <div
          class="row"
        >
          <div
            class="bcl-card-start-col bcl-size-large"
          >
            <img
              alt="alt img"
              class="card-img-top rounded-0 rounded-start"
              src="https://picsum.photos/255/255?random=6"
            />
          </div>
          <div
            class="col-md col-xl-9 col-xxl-8"
          >
            <div
              class="card-body pt-4 pt-md-0 px-0 px-md-1-5 pb-0"
            >
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                <br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                <br />
                  Duis fermentum facilisis ex, ac porta massa.
              </p>
              <div
                class="mt-2-5"
              />
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Content banner renders correctly with a date block 1`] = `
<jest>
  <div
    class="bcl-content-banner pb-md-4-75 pb-4 pt-4 pt-md-4-75 bg-lighter"
  >
    <div
      class="container"
    >
      <article
        class="card"
      >
        <div
          class="row"
        >
          <div
            class="bcl-card-start-col"
          />
          <div
            class="col-12 col-md col-xxl-9"
          >
            <div
              class="card-body pt-0 px-0 pb-0"
            >
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                <br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                <br />
                  Duis fermentum facilisis ex, ac porta massa.
              </p>
              <div
                class="mt-2-5"
              />
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Content banner renders correctly with title and link 1`] = `
<jest>
  <div
    class="bcl-content-banner pb-md-4-75 pb-4 pt-4 pt-md-4-75 bg-lighter"
  >
    <div
      class="container"
    >
      <article
        class="card"
      >
        <div
          class="row"
        >
          <div
            class="bcl-card-start-col bcl-size-large"
          >
            <img
              alt="alt img"
              class="card-img-top rounded-0 rounded-start"
              src="https://picsum.photos/255/255?random=6"
            />
          </div>
          <div
            class="col-md col-xl-9 col-xxl-8"
          >
            <div
              class="card-body pt-4 pt-md-0 px-0 px-md-1-5 pb-0"
            >
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                <br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                <br />
                  Duis fermentum facilisis ex, ac porta massa.
              </p>
              <div
                class="mt-2-5"
              />
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Content banner with links renders correctly 1`] = `
<jest>
  <div
    class="bcl-content-banner pb-md-4-75 pb-4 pt-4 pt-md-4-75 bg-lighter"
  >
    <div
      class="container"
    >
      <article
        class="card"
      >
        <div
          class="row"
        >
          <div
            class="bcl-card-start-col bcl-size-large"
          >
            <img
              alt="alt img"
              class="card-img-top rounded-0 rounded-start"
              src="https://picsum.photos/255/255?random=6"
            />
          </div>
          <div
            class="col-md col-xl-9 col-xxl-8"
          >
            <div
              class="card-body pt-4 pt-md-0 px-0 px-md-1-5 pb-0"
            >
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                <br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                <br />
                  Duis fermentum facilisis ex, ac porta massa.
              </p>
              <div
                class="mt-2-5"
              />
              <div
                class="mt-2-5 mb-2"
              />
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Content banner with white background renders correctly 1`] = `
<jest>
  <div
    class="bcl-content-banner pt-4 pt-md-4-75 bg-white"
  >
    <div
      class="container"
    >
      <article
        class="card"
      >
        <div
          class="row"
        >
          <div
            class="bcl-card-start-col bcl-size-large"
          >
            <img
              alt="alt img"
              class="card-img-top rounded-0 rounded-start"
              src="https://picsum.photos/255/255?random=6"
            />
          </div>
          <div
            class="col-md col-xl-9 col-xxl-8"
          >
            <div
              class="card-body pt-4 pt-md-0 px-0 px-md-1-5 pb-0"
            >
              <div
                class="my-3"
              >
                <span
                  class="text-muted me-3"
                >
                  17 October 2019
                </span>
              </div>
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. 
                <br />
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Duis fermentum facilisis ex, ac porta massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                <br />
                <br />
                  Duis fermentum facilisis ex, ac porta massa.
              </p>
              <div
                class="mt-2-5"
              />
            </div>
          </div>
        </div>
      </article>
      <div
        class="d-flex justify-content-end mt-2 align-items-center"
      >
        <button
          class="w-auto me-3 btn btn-outline-primary btn-md"
          type="button"
        >
          Print
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#printer-fill"
            />
          </svg>
        </button>
        <button
          class="w-auto btn btn-outline-primary btn-md"
          type="button"
        >
          Export
          <svg
            class="ms-2-5 bi icon--fluid"
          >
            <use
              xlink:href="/icons.svg#file-arrow-down-fill"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</jest>
`;
